# using_llms_for_syntacric_research

./: .gitignore  README.md  api_call_judgment.ipynb  load_human_results.ipynb  load_llm_results.ipynb  pyproject.toml
data/: reproduction_exp2.R
