[tool.poetry]
name = "linguistic-llm-call"
version = "0.1.0"
description = ""
authors = ["Max"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.19.0"
pandas = "^2.2.2"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
